k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demoapp-producer-ingress
  labels:
    app: demoapp
    role: producer
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demoapp-producer-service
                port:
                  number: 8080
  tls:
    - hosts:
        - poc4k-tsnode1b.ovng.dev.myovcloud.com
        - poc4k-tsnode2b.ovng.dev.myovcloud.com
        - poc4k-tsnode3b.ovng.dev.myovcloud.com
      secretName: demoapp-tls
